--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,9 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
   <link rel="stylesheet" href="/frontend/global.css" />
-  <link rel="stylesheet" href="/frontend/animation.css" />
   <title>Login</title>
 </head>
 <style>
@@ -138,10 +136,9 @@
 
 <body>
   <div id="container">
-    <div id="planet-1" loading="lazy"></div>
     <div id="mid">
       <div class="title">
-        <a href="/"><img src="/assets/favicon/favicon-32x32.png"></a>
+        <a href="/">logo</a>
         <h1 style="color: white;">Login</h1>
       </div>
       <div class="box">
@@ -168,7 +165,6 @@
         </div>
       </div>
     </div>
-    <div id="planet-2" loading="lazy"></div>
   </div>
 </body>
 <script>
@@ -197,15 +193,7 @@
         })
         .then((data) => {
           if (data.status === "success") {
-            fetch("/user", {
-              method: "post",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                clientusername
-              }),
-            })
+            console.log(data.status)
             window.location.href = "/";
           } else {
             alert(data.message);
@@ -323,7 +311,7 @@
         "Content-Type": "application/json",
       },
       body: JSON.stringify({
-        email: clientEmail, // Correct the key to "email"
+        email: clientEmail,
       }),
     })
       .then((response) => {
